--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 20px;
+}
+h1 {
+  color: #333;
+}
+input, button {
+  padding: 10px;
+  margin: 5px 0;
+}
 
